# powervr_gs

./: BUILD.bazel  build-tool.py  drm_nulldisp_drv.c  drm_nulldisp_gem.c  kernel_compatibility.h  pvrversion.h
mt8173/: mt8173_sysconfig.c
pixel/: debug.c  dvfs.c  dvfs_governor.c  genpd.c  gpu_secure.c  gpu_secure_protocol.h  of.c  of.h  pixel_fw_info_shared.h  sscd.c  sysconfig.c  sysconfig.h  uid_time_in_state.h
pixel/lga/production/: config_kernel.h  config_kernel.mk
pvrsrvkm/: Makefile  allocmem.c  connection_server.c  debug_common.c  device.h  devicemem.c  devicemem_history_server.c  devicemem_server.c  devicemem_server.h  devicemem_utils.c  devicemem_utils.h  di_impl_brg.c  event.c  handle.c  htb_debug.c  htbuffer_sf.h  img_defs.h  km_apphint.c  km_apphint_defs_common.h  mmu_common.c  module_common.c  opaque_types.h  os_apphint.h  os_apphintkm.h  osfunc.c  osfunc.h  pdump_server.c  pdumpdefs.h  pdumpdesc.h  physmem.c  physmem.h  physmem_dmabuf.c  physmem_dmabuf.h  physmem_dmabuf_fbc_tracker.c  physmem_extmem_linux.c  physmem_osmem_linux.c  physmem_ramem.c  physmem_test.c  pmr.c  pmr.h  (+84 more)
pvrsrvkm/volcanic/: rgx_fwif_alignchecks.h  rgx_fwif_hwperf.h  rgx_fwif_km.h  rgx_fwif_shared.h  rgx_hwperf_table.h  rgx_options.h  rgxdebug.c  rgxdevice.h  rgxhwperf.c  rgxinit.c  rgxlayer_impl.c  rgxmulticore.c  rgxpdump.c  rgxray.c  rgxray.h  rgxsrvinit.c  rgxstartstop.c  rgxta3d.c  rgxta3d.h  vmm_type_stub.c
pvrsrvkm/volcanic/hwdefs/km/: rgx_bvnc_defs_km.h  rgx_bvnc_table_km.h  rgx_cr_defs_km.h  rgxdefs_km.h  rgxtbdefs_km.h
tc/: apollo_regs.h  dma_lma_heap.c  drm_pdp_crtc.c  drm_pdp_debugfs.c  drm_pdp_drv.c  drm_pdp_drv.h  drm_pdp_fb.c  drm_pdp_gem.c  drm_pdp_gem.h  drm_pdp_modeset.c  drm_pdp_plane.c  fpga.c  fpga.h  ion_lma_heap.c  pdp_common.h  pdp_odin.c  sysconfig.c  tc_odin.c  tc_odin_common_regs.h
(+4 files in other folders)
